<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.xi.maple</groupId>
    <artifactId>maple</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>8</java.version>

        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.compilerVersion>8</maven.compiler.compilerVersion>
    </properties>

    <modules>
        <module>maple-dependencies</module>
        <module>maple-spring-dependencies</module>
        <module>maple-common</module>
        <module>maple-service-spring-boot-starter</module>
        <module>maple-eureka</module>
        <module>maple-authorization-server</module>
        <module>maple-persistence-models</module>
        <module>maple-persistence-service</module>
        <module>maple-restful-api</module>
        <module>maple-manager</module>
        <module>maple-engine-plugins</module>
        <module>maple-engine-builder-base</module>
        <module>maple-executor</module>
        <module>maple-ext-services</module>
        <module>maple-mp-models</module>
        <module>maple-mp-service</module>
        <module>maple-gateway</module>
    </modules>
</project>
